# TBDR

./: .gitignore  CMakeLists.txt  astcenc  build.gradle  build.gradle.kts  converter.sh  extensões_mali_reais.txt  move_astc.sh
.github/workflows/: build.yml
assets/minecraft/astc_cache/: 1.astc  2.astc  3.astc  absorbing_full_blinking.astc  acacia.astc  acacia_door.astc  acacia_door_top.astc  acacia_leaves.astc  acacia_planks.astc  accented.astc  activator_rail_on.astc  aggressive_panda.astc  alex.astc  allium.astc  amethyst.astc  amethyst_cluster.astc  angler_pottery_pattern.astc  anvil.astc  apple.astc  armor_empty.astc  armor_full.astc  armorer.astc  arrow.astc  ascii_sga.astc  axolotl_bucket.astc  axolotl_gold.astc  azalea_leaves.astc  azalea_side.astc  aztec2.astc  azure_bluet.astc  back.astc  bamboo_chest_raft.astc  bamboo_door_top.astc  bamboo_fence_gate_particle.astc  bamboo_hanging_sign.astc  bamboo_mosaic.astc  bamboo_sign.astc  bamboo_singleleaf.astc  bamboo_small_leaves.astc  banner_slot.astc  (+841 more)
assets/minecraft/shaders/: fallback_fragment.glsl  fbfetch_fragment.glsl  pls_fragment.glsl  vertex.glsl
src/main/cpp/: NativeExtensionDetector.cpp
src/main/java/com/tdbr/optimizer/: TDBRConfig.java  TDBROptimizerClientMod.java
src/main/resources/: extensoes_GLES_complete.json  fabric.mod.json.bak  tdbr-optimizer.mixins.json
src/main/resources/assets/minecraft/astc_cache/: 4.astc  acacia_door_bottom.astc  acacia_hanging_sign.astc  acacia_log.astc  acacia_log_top.astc  acacia_sapling.astc  acacia_trapdoor.astc  accept.astc  accept_highlighted.astc  air.astc  (+856 more)
(+861 files in other folders)
